Adding the MorrellMin component

--- a/src/App.css
+++ b/src/App.css
@@ -7,21 +7,24 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/*@media (prefers-reduced-motion: no-preference) {*/
+/*  .App-logo {*/
+/*    animation: App-logo-spin infinite 20s linear;*/
+/*  }*/
+/*}*/
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-image: url("img/jdme.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 200px;
   color: white;
+}
+
+img {
+  width: 30%;
+  float: left;
+  margin: 1.66%;
 }
 
 .App-link {
@@ -36,3 +39,5 @@
     transform: rotate(360deg);
   }
 }
+
+
